# swain

./: .gitignore  Cargo.toml  README.md
data/shaders/: triangle.frag.spv  triangle.vert  triangle.vert.spv
examples/: example.rs
src/: engine.rs  lib.rs  presentation.rs
vault/: keep.txt  requirements.txt  todo.md  todo.txt
