[package]
name = "swain"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28.0"
ash = { version = "0.37.3+1.3.251", features = ["linked", "debug"] }
ash-window = "0.12.0"
raw-window-handle = "0.5"
cgmath = { version = "0.18", features = ["serde"] }
image = "0.24.8"
anyhow = "1.0.79"
lazy_static = "1.4.0"
env_logger = "0.11.1"
log = "0.4.20"
